[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Items/springboardUp.png" type="Texture" id=1]
[ext_resource path="res://assets/Items/springboardDown.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Objects/SpringBoard.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.8206, 17.3281 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.1968, 33.6615 )

[node name="SpringBoard" type="Node2D"]
scale = Vector2( 1.8, 1 )
script = ExtResource( 3 )

[node name="Textures" type="Node2D" parent="."]

[node name="springboardUp" type="Sprite" parent="Textures"]
texture = ExtResource( 1 )

[node name="springboardDown" type="Sprite" parent="Textures"]
visible = false
texture = ExtResource( 2 )

[node name="JumpDetector" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape" type="CollisionShape2D" parent="JumpDetector"]
position = Vector2( -0.605892, 17.6212 )
shape = SubResource( 1 )

[node name="PushDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushDetector"]
modulate = Color( 0, 0.568627, 0.980392, 1 )
position = Vector2( -0.561195, 1.12247 )
shape = SubResource( 2 )
[connection signal="body_entered" from="JumpDetector" to="." method="_on_JumpDetector_body_entered"]
[connection signal="body_entered" from="PushDetector" to="." method="_on_PushDetector_body_entered"]
[connection signal="body_exited" from="PushDetector" to="." method="_on_PushDetector_body_exited"]
